--- a/docs/docs/model-evaluation/index.mdx
+++ b/docs/docs/model-evaluation/index.mdx
@@ -1,3 +1,7 @@
+---
+sidebar_position: 7
+---
+
 import { CardGroup, Card } from "@site/src/components/Card";
 import { APILink } from "@site/src/components/APILink";
 
