Remove migrated pages from rst_to_migrate folder (#13778)
Signed-off-by: Eduardo Sanz <eduardo.sanz@databricks.com>

--- a/docs/docs/llms/index.mdx
+++ b/docs/docs/llms/index.mdx
@@ -27,11 +27,21 @@ Note that there are additional tutorials within the ["Explore the Native LLM Fla
 
 <CardGroup>
   <Card
-    link="chat-model-guide/"
-    headerText="Simplified Custom GenAI Models"
+    link="chat-model-intro/"
+    headerText="Custom GenAI Models with ChatModel"
     text={[
-      "Learn how to build a custom GenAI Agent with a simplified developer experience using MLflow's ",
+      "Learn the basics of creating custom chat models using MLflow's ",
       <code>ChatModel</code>,
+      " by wrapping a local LLM provider."
+    ]}
+  />
+  <Card
+    link="chat-model-guide/"
+    headerText="Advanced ChatModel Development"
+    text={[
+      "Take an in-depth look at the full range of ",
+      <code>ChatModel</code>,
+      " features, such as tracing and configuration management."
     ]}
   />
   <Card
@@ -68,10 +78,6 @@ Note that there are additional tutorials within the ["Explore the Native LLM Fla
 </CardGroup>
 
 ## MLflow Tracing
-
-:::note
-MLflow Tracing is currently in **Experimental Status** and is subject to change without deprecation warning or notification.
-:::
 
 MLflow offers comprehensive tracing capabilities to monitor and analyze the execution of GenAI applications. This includes automated tracing GenAI frameworks such as
 LangChain, OpenAI, LlamaIndex, manual trace instrumentation using high-level fluent APIs, and low-level client APIs for fine-grained control. This functionality
@@ -125,7 +131,7 @@ APIs may change as this new feature is refined and its functionality is expanded
 The MLflow AI Gateway supports a large range of foundational models from popular SaaS model vendors, as well as providing a means of self-hosting your
 own open source model via an integration with MLflow model serving.
 
-Please refer to [Supported Provider Models](deployments#providers) for the full list of supported providers and models.
+Please refer to [Supported Providers](deployments#providers) for the full list of supported providers and models.
 
 If you're interested in learning about how to set up the MLflow AI Gateway for a specific provider, follow the links below for our up-to-date
 documentation on GitHub. Each link will take you to a README file that will explain how to set up a route for the provider. In the same directory as
